# bump

./: .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  go.mod  go.sum  justfile  main.go
.github/workflows/: release.yml  test.yml
docs/: CHANGELOG.md
internal/changelog/: manager.go
internal/config/: bump_config.go
internal/git/: manager.go  manager_test.go
internal/models/: main.go
internal/version/: manager.go
src/: changelog.rs  git.rs  lib.rs  main.rs  project_files.rs  tests.rs  version.rs
