[package]
name = "bump"
version = "0.0.8"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
semver = "1.0"
toml_edit = "0.21"
anyhow = "1.0"
git2 = "0.18"
chrono = "0.4"
regex = "1.10"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
strip = true   # Removes debug symbols
lto = true     # Enables Link-Time Optimization
opt-level = "z"  # Optimize for size instead of speed
